# GJaskowskiPracaInzynierska

./: .env.example  .gitignore  README.md  docker-compose.yml  exam_questions.json  pyproject.toml
src/praca/: __main__.py  exam_system.py  knowledge_base.py  server.py
